#67: Fixed borders in legacy IE.
Fix to previous commit. Borders not always displayed on IE8. A border width of 0.065em seems to be too low on this browser with a small font-size such as 11px.

--- a/Controls/Button/Button.css
+++ b/Controls/Button/Button.css
@@ -11,6 +11,7 @@ div.FitUiControlButton
 	padding: 0.3em 0.75em 0.3em 0.75em;
 	border-radius: 3px;
 	border-width: 0.065em;
+	border-width: 1px\9;
 	border-style: solid;
 
 	-webkit-user-select: none;
