--- a/Controls/CheckBox/CheckBox.css
+++ b/Controls/CheckBox/CheckBox.css
@@ -29,6 +29,7 @@ div.FitUiControlCheckBox[data-enabled="true"]:focus
 div.FitUiControlCheckBox > div
 {
 	border: 0.065em solid #BBBBBB;
+	border-width: 1px\9;
 	border-radius: 2px;
 	margin-right: 0.3em;
 	color: #333333;
