--- a/Controls/DatePicker/DatePicker.css
+++ b/Controls/DatePicker/DatePicker.css
@@ -13,6 +13,7 @@ div.FitUiControlDatePicker input[type="text"]
 	margin: 0px;
 	font-size: inherit;
 	border: 0.065em solid #BBBBBB;
+	border-width: 1px\9;
 	border-radius: 2px;
 	display: block; /* Remove annoying spacing above input when outline is applied (when value is invalid) */
 
