--- a/Controls/Dialog/Dialog.css
+++ b/Controls/Dialog/Dialog.css
@@ -1,6 +1,7 @@
 div.FitUiControlDialog
 {
 	border: 0.065em solid #333333;
+	border-width: 1px\9;
 	background: #FFFFFF;
 	width: auto;
 	min-width: 280px; /* Must be identical to the value specified in MinimumWidth(..) in Dialog.js ! */
@@ -63,6 +64,7 @@ div.FitUiControlDialogTitleButtons
 {
 	background-color: white;
 	border-bottom: 0.065em solid silver;
+	border-bottom-width: 1px\9;
 	height: 3.2em;
 }
 
@@ -108,6 +110,7 @@ div.FitUiControlDialogButtons
 	/*background-color: white;*/
 	padding: 0px;
 	border-top: 0.065em solid silver;
+	border-top-width: 1px\9;
 	text-align: right;
 }
 div.FitUiControlDialogButtons div.FitUiControlButton
